# voice-ai

./: .gitignore  docker-compose.yml
apps/py-app/: .dockerignore  .gitignore  Dockerfile  README.md  gunicorn_config.py  main.py  pyproject.toml
apps/py-app/src/api/: __init__.py  routes.py
apps/web-app/: .dockerignore  Dockerfile  README.md  next.config.js  next.config.ts  package.json  pnpm-lock.yaml
apps/web-app/src/app/: globals.css  layout.tsx  page.tsx
