[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-app"
version = "0.1.0"
description = "FastAPI TTS backend application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "edge-tts>=6.1.9",
    "aiofiles>=23.2.1",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "httpx>=0.25.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "httpx>=0.25.0",
]